resources/assets/stylesheets/scss/links.scss
/* --- Links ---------------------------------------------------------------- */
a, a:link, a:visited {
    color: $base-color;
    text-decoration: none;

    &.index     { color: #444; }
    &.printhead { color: #339; }
    &.tree      { color: #000; }
    &.toolbar {
        color: #91a2b6;
        font-size: 9px;
    }
}
a[href] {
    @media not prefers-reduced-motion {
        transition: color $transition-duration;
    }
}
a[disabled] {
    pointer-events: none;
}

a:hover, a:active, a:hover.index, a:active.index, a:hover.tree {
    color: $active-color;
    text-decoration: none;
}

a:hover.toolbar {
    color: #eee;
}

a.link-intern, a.link-extern {
    white-space: nowrap;
}

a.link-intern {
    @include icon(before, link-intern, clickable, 16px, 2px);
}
a.link-extern {
    @include icon(before, link-extern, clickable, 16px, 2px);
}
a.link-add {
    @include icon(before, add, clickable, 16px, 2px);
}
a.link-edit {
    @include icon(before, edit, clickable, 16px, 2px);
}

a img {
    border: 0;
}

